[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/presets/game/enemies/stand_enemy/stand_enemy.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://presets/game/guns/machine_gun.tscn" type="PackedScene" id=3]
[ext_resource path="res://themes/player_theme.tres.theme" type="Theme" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 331.423, 29.697 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.1616, 30.5737 )

[node name="stand_enemy" type="Node2D"]
script = ExtResource( 1 )

[node name="skin" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="player_detector" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 47.2478, 0.418121 )
monitorable = false
collision_layer = 0

[node name="collision" type="CollisionShape2D" parent="player_detector"]
position = Vector2( 75.1361, -0.766235 )
shape = SubResource( 1 )

[node name="damage_detector" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 47.2478, 0.418121 )
collision_layer = 2
collision_mask = 4

[node name="collision" type="CollisionShape2D" parent="damage_detector"]
position = Vector2( -48.461, -2.14812 )
shape = SubResource( 2 )

[node name="weapon" parent="." instance=ExtResource( 3 )]
position = Vector2( 30.9846, 0.111862 )

[node name="life_bar" type="ProgressBar" parent="."]
visible = false
margin_left = -40.0
margin_top = -49.776
margin_right = 40.0
margin_bottom = -35.776
theme = ExtResource( 4 )
step = 1.0
value = 100.0
percent_visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="area_entered" from="player_detector" to="." method="_on_player_detector_area_entered"]
[connection signal="area_exited" from="player_detector" to="." method="_on_player_detector_area_exited"]
[connection signal="area_entered" from="damage_detector" to="." method="_on_damage_detector_area_entered"]
